<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradientbackground"
    tools:context="MainActivity">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="120dp"
        android:layout_height="150dp"
        android:layout_above="@+id/user"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="20dp"
        app:srcCompat="@drawable/fan" />

    <EditText
        android:id="@+id/user"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_above="@+id/pass"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:background="@drawable/textfield_rounded"
        android:drawableLeft="@drawable/ic_action_user"
        android:ems="10"
        android:hint="@string/user"
        android:inputType="textPersonName"
        android:textSize="16dp" />

    <EditText
        android:id="@+id/pass"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_alignStart="@+id/user"
        android:layout_alignLeft="@+id/user"
        android:layout_alignBottom="@+id/cardView"
        android:layout_marginBottom="120dp"
        android:background="@drawable/textfield_rounded"
        android:drawableLeft="@drawable/ic_action_password"
        android:ems="10"
        android:hint="@string/pass"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/cardView"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_above="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="35dp"
        android:background="@drawable/button_rounded"
        android:text="@string/login"
        android:textColor="#ffffff"
        android:onClick="login"
        />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/linearLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="6dp"
        android:text="@string/sing_up_here"
        android:clickable="true"
        android:onClick="signup"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/imageView"
        android:layout_alignStart="@+id/imageView"
        android:id="@+id/linearLayout">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/twitter" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            app:srcCompat="@drawable/instagram" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            app:srcCompat="@drawable/facebook" />

    </LinearLayout>


</RelativeLayout>
